# webhook-trader

./: .dockerignore  .env.example  .gitignore  ADAUGA_FUSION_TEST_MODE.md  Dockerfile  FUSION_PRO_ASTS_AAPL_SETUP.md  FUSION_PRO_SETUP.md  FUSION_PRO_V3_1_SETUP.md  Justfile  README.md  alpaca-config.env  app.py  client.py  docker-compose.yml  fly.toml  fusion_pro.py  fusion_pro_config.json  pgadmin-servers.json  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  fly-deploy.yml  fly.yaml
.openhands/microagents/: repo.md
examples/webhook_payloads/: bracket.json  buy.json  minimal_sell.json  short.json  stop_loss.json  take_profit.json  tradingview_example.json  trailing_stop.json
lib/: api_models.py  constants.py  db.py  env_vars.py  utils.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts  types.ts
ui/src/components/: SnapshotChart.tsx
