[project]
name = "webhook-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.35.1",
    "fastapi[standard]>=0.115.6",
    "fastapi-utils>=0.8.0",
    "python-dotenv>=1.0.1",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "typing-inspect>=0.9.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "ruff>=0.11.5",
]
